--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  syncfusion_flutter_calendar: ^19.4.53
+  flutter_local_notifications: ^9.3.2
+  timezone: ^0.8.0
 
 
   # The following adds the Cupertino Icons font to your application.
