--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,8 +43,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.finki.ukim.mk.lab_03"
-        minSdkVersion 16
+        applicationId "com.finki.ukim.mk.exam_planner"
+        minSdkVersion 20
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
